--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Assignment 1 | COMP1073 Client-Side JavaScript</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>See-N-Say Storymaker</h1>
@@ -11,22 +12,37 @@
     <section>
       <!-- Section with all the buttons for the user to build their story -->
       <h2>Create Your Story</h2>
-      <button id="noun1">Noun 1</button>
-      <p id="choosenNoun1"></p>
-      <button id="verb">Verb</button>
-      <p id="choosenVerb"></p>
-      <button id="adjective">Adjective</button>
-      <p id="choosenAdjective"></p>
-      <button id="noun2">Noun 2</button>
-      <p id="choosenNoun2"></p>
-      <button id="setting">Setting</button>
-      <p id="choosenSetting"></p>
+      <div class="container">
+        <div class="item-box">
+          <button id="noun1">Noun 1</button>
+          <p id="choosenNoun1"></p>
+        </div>
+
+        <div class="item-box">
+          <button id="verb">Verb</button>
+          <p id="choosenVerb"></p>
+        </div>
+        <div class="item-box">
+          <button id="adjective">Adjective</button>
+          <p id="choosenAdjective"></p>
+        </div>
+        <div class="item-box">
+          <button id="noun2">Noun 2</button>
+          <p id="choosenNoun2"></p>
+        </div>
+        <div class="item-box">
+          <button id="setting">Setting</button>
+          <p id="choosenSetting"></p>
+        </div>
+      </div>
     </section>
     <section>
       <!-- Section with playback controls to see or hear the story -->
       <h2>See Your Story</h2>
-      <button id="playback">Show Story</button>
-      <button id="random">Random Story</button>
+      <div class="button-box">
+        <button id="playback">Show Story</button>
+        <button id="random">Random Story</button>
+      </div>
       <!-- Empty paragraph to display the story -->
       <p id="story"></p>
     </section>
