--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <h1>See-N-Say Storymaker</h1>
-    <p id="studentId"></p>
+    <div class="item-box first">
+      <button id="stuButton">Who Am I?</button>
+      <p id="studentId"></p>
+    </div>
     <section>
       <!-- Section with all the buttons for the user to build their story -->
       <h2>Create Your Story</h2>
