--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Assignment 1 | COMP1073 Client-Side JavaScript</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script src="./js/storymaker.js" defer></script>
   </head>
   <body>
     <h1>See-N-Say Storymaker</h1>
@@ -50,6 +51,6 @@
       <p id="story"></p>
     </section>
 
-    <script src="./js/storymaker.js"></script>
+   
   </body>
 </html>
