add reset button

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       <div class="button-box">
         <button id="playback">Show Story</button>
         <button id="random">Random Story</button>
+        <button id="reset">Reset</button>
       </div>
       <!-- Empty paragraph to display the story -->
       <p id="story"></p>
