--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <title>Assignment 1 | COMP1073 Client-Side JavaScript</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <script src="./js/storymaker.js" defer></script>
+    <script src="./js/storymaker.js" defer></script> <!-- The linke for javascript file -->
   </head>
+  <!-- I added some divs so that I can make flexbox -->
   <body>
     <h1>See-N-Say Storymaker</h1>
-    <div class="item-box first">
+    <div class="item-box first"> <!-- This is for display my student number and name  -->
       <button id="stuButton">Who Am I?</button>
       <p id="studentId"></p>
     </div>
